*SVN*

* Introduce a cookie-based session store as the Rails default. Sessions typically contain at most a user_id and flash message; both fit within the 4K cookie size limit. A secure hash is included with the cookie to ensure data integrity (a user cannot alter his user_id without knowing the secret key included in the hash). If you have more than 4K of session data or don't want your data to be visible to the user, pick another session store. Cookie-based sessions are dramatically faster than the alternatives.  [Jeremy Kemper]

* Added .erb and .builder as preferred aliases to the now deprecated .rhtml and .rxml extensions [Chad Fowler]. This is done to separate the renderer from the mime type. .erb templates are often used to render emails, atom, csv, whatever. So labeling them .rhtml doesn't make too much sense. The same goes for .rxml, which can be used to build everything from HTML to Atom to whatever. .rhtml and .rxml will continue to work until Rails 3.0, though. So this is a slow phasing out. All generators and examples will start using the new aliases, though.

* Added caching option to AssetTagHelper#stylesheet_link_tag and AssetTagHelper#javascript_include_tag [DHH]. Examples:

    stylesheet_link_tag :all, :cache => true # when ActionController::Base.perform_caching is false =>
      <link href="/stylesheets/style1.css"  media="screen" rel="Stylesheet" type="text/css" />
      <link href="/stylesheets/styleB.css"  media="screen" rel="Stylesheet" type="text/css" />
      <link href="/stylesheets/styleX2.css" media="screen" rel="Stylesheet" type="text/css" />
 
    stylesheet_link_tag :all, :cache => true # when ActionController::Base.perform_caching is true =>
      <link href="/stylesheets/all.css"  media="screen" rel="Stylesheet" type="text/css" />

  ...when caching is on, all.css is the concatenation of style1.css, styleB.css, and styleX2.css.
  Same deal for JavaScripts.
